parser/src/snapshots/rapidus_parser__arrow_function1.snap
---
source: parser/src/lib.rs
expression: parser.parse_all().unwrap()
---
Node {
    base: StatementList(
        [
            Node {
                base: ArrowFunction(
                    [
                        FormalParameter {
                            name: "a",
                            pattern: None,
                            init: None,
                            is_rest_param: false,
                        },
                        FormalParameter {
                            name: "b",
                            pattern: None,
                            init: None,
                            is_rest_param: false,
                        },
                    ],
                    Node {
                        base: StatementList(
                            [
                                Node {
                                    base: Return(
                                        Some(
                                            Node {
                                                base: BinaryOp(
                                                    Node {
                                                        base: Identifier(
                                                            "a",
                                                        ),
                                                        loc: Loc(line:1,column:19,pos:19),
                                                    },
                                                    Node {
                                                        base: Identifier(
                                                            "b",
                                                        ),
                                                        loc: Loc(line:1,column:23,pos:23),
                                                    },
                                                    Add,
                                                ),
                                                loc: Loc(line:1,column:23,pos:23),
                                            },
                                        ),
                                    ),
                                    loc: Loc(line:1,column:12,pos:12),
                                },
                            ],
                        ),
                        loc: Loc(line:1,column:12,pos:12),
                    },
                ),
                loc: Loc(line:1,column:0,pos:0),
            },
        ],
    ),
    loc: Loc(line:1,column:0,pos:0),
}
