parser/src/snapshots/rapidus_parser__arrow_function2.snap
---
source: parser/src/lib.rs
expression: parser.parse_all().unwrap()
---
Node {
    base: StatementList(
        [
            Node {
                base: ArrowFunction(
                    [
                        FormalParameter {
                            name: "a",
                            pattern: None,
                            init: None,
                            is_rest_param: false,
                        },
                        FormalParameter {
                            name: "b",
                            pattern: None,
                            init: None,
                            is_rest_param: false,
                        },
                        FormalParameter {
                            name: "c",
                            pattern: None,
                            init: None,
                            is_rest_param: true,
                        },
                    ],
                    Node {
                        base: Return(
                            Some(
                                Node {
                                    base: Identifier(
                                        "a",
                                    ),
                                    loc: Loc(line:1,column:16,pos:16),
                                },
                            ),
                        ),
                        loc: Loc(line:1,column:16,pos:16),
                    },
                ),
                loc: Loc(line:1,column:0,pos:0),
            },
        ],
    ),
    loc: Loc(line:1,column:0,pos:0),
}
