parser/src/snapshots/rapidus_parser__if1.snap
---
source: parser/src/lib.rs
expression: parser.parse_all().unwrap()

---
Node {
    base: StatementList(
        [
            Node {
                base: If(
                    Node {
                        base: BinaryOp(
                            Node {
                                base: Identifier(
                                    "x",
                                ),
                                loc: Loc(line:1,column:4,pos:4),
                            },
                            Node {
                                base: Number(
                                    2.0,
                                ),
                                loc: Loc(line:1,column:9,pos:9),
                            },
                            Le,
                        ),
                        loc: Loc(line:1,column:9,pos:9),
                    },
                    Node {
                        base: Identifier(
                            "then_stmt",
                        ),
                        loc: Loc(line:2,column:12,pos:24),
                    },
                    Node {
                        base: Identifier(
                            "else_stmt",
                        ),
                        loc: Loc(line:4,column:12,pos:59),
                    },
                ),
                loc: Loc(line:1,column:3,pos:3),
            },
        ],
    ),
    loc: Loc(line:1,column:0,pos:0),
}
