parser/src/snapshots/rapidus_parser__var_decl1.snap
---
source: parser/src/lib.rs
expression: parser.parse_all().unwrap()

---
Node {
    base: StatementList(
        [
            Node {
                base: StatementList(
                    [
                        Node {
                            base: VarDecl(
                                "a",
                                None,
                                Var,
                            ),
                            loc: Loc(line:1,column:4,pos:4),
                        },
                        Node {
                            base: VarDecl(
                                "b",
                                Some(
                                    Node {
                                        base: Number(
                                            21.0,
                                        ),
                                        loc: Loc(line:1,column:11,pos:11),
                                    },
                                ),
                                Var,
                            ),
                            loc: Loc(line:1,column:7,pos:7),
                        },
                    ],
                ),
                loc: Loc(line:1,column:0,pos:0),
            },
        ],
    ),
    loc: Loc(line:1,column:0,pos:0),
}
